fix: add style for collapsed sidebar

--- a/src/Widgets/LangSwitcher/LangSwitcher.module.scss
+++ b/src/Widgets/LangSwitcher/LangSwitcher.module.scss
@@ -1,6 +1,8 @@
 .langSwitcher {
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
+  justify-content: center;
   gap: 10px;
   font-size: 20px;
   font-weight: bold;
