--- a/src/Widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
+++ b/src/Widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
@@ -16,6 +16,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
   gap: 15px;
   bottom: 20px;
 }
